src/versions: add heimdal

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,dtc,file,flex,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,ncurses,openssl,patch,tcpdump,versions.yml
+targets=bsddialog,byacc,bzip2,dtc,file,flex,heimdal,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,ncurses,openssl,patch,tcpdump,versions.yml
 dist=Makefile
 
 #targets
@@ -26,6 +26,10 @@ sources=file.c
 [flex]
 type=binary
 sources=flex.c
+
+[heimdal]
+type=binary
+sources=heimdal.c
 
 [libarchive]
 type=binary
@@ -80,6 +84,6 @@ sources=tcpdump.c
 
 [versions.yml]
 type=command
-command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./ncurses; ./openssl; ./patch; ./tcpdump) > versions.yml
-depends=bsddialog,byacc,bzip2,dtc,file,flex,libarchive,libedit,libevent,liblzma,libpcap,ncurses,openssl,patch,tcpdump
+command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./ncurses; ./openssl; ./patch; ./tcpdump) > versions.yml
+depends=bsddialog,byacc,bzip2,dtc,file,flex,heimdal,libarchive,libedit,libevent,liblzma,libpcap,ncurses,openssl,patch,tcpdump
 enabled=0
