src/versions: add libxo

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,dtc,file,flex,heimdal,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,ncurses,openssl,patch,tcpdump,versions.yml
+targets=bsddialog,byacc,bzip2,dtc,file,flex,heimdal,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,ncurses,openssl,patch,tcpdump,versions.yml
 dist=Makefile
 
 #targets
@@ -65,6 +65,10 @@ sources=liblzma.c
 type=binary
 sources=libpcap.c
 
+[libxo]
+type=binary
+sources=libxo.c
+
 [ncurses]
 type=binary
 sources=ncurses.c
@@ -84,6 +88,6 @@ sources=tcpdump.c
 
 [versions.yml]
 type=command
-command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./ncurses; ./openssl; ./patch; ./tcpdump) > versions.yml
-depends=bsddialog,byacc,bzip2,dtc,file,flex,heimdal,libarchive,libedit,libevent,liblzma,libpcap,ncurses,openssl,patch,tcpdump
+command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./tcpdump) > versions.yml
+depends=all
 enabled=0
