src/versions: build programs with warnings enabled

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,5 @@
 targets=bsddialog,byacc,bzip2,dtc,file,flex,heimdal,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,ncurses,openssl,patch,tcpdump,versions.yml
+cflags=-W -Wall -g -O2
 dist=Makefile
 
 #targets
