--- a/src/versions/Makefile
+++ b/src/versions/Makefile
@@ -4,6 +4,11 @@ PREFIX	= /usr/local
 DESTDIR	=
 BINDIR	= $(PREFIX)/bin
 SBINDIR	= $(PREFIX)/sbin
+CC	= cc
+CPPFLAGSF=
+CPPFLAGS=
+CFLAGSF	=
+CFLAGS	= -W -Wall -g -O2
 EXEEXT	=
 RM	= rm -f
 LN	= ln -f
