src/versions: build programs with protections
This enables stack protection and immediate, read-only relocation
processing.

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,5 +1,6 @@
 targets=bsddialog,byacc,bzip2,dtc,file,flex,heimdal,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,ncurses,openssl,patch,tcpdump,versions.yml
-cflags=-W -Wall -g -O2
+cflags=-W -Wall -g -O2 -fstack-protector
+ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile
 
 #targets
