Makefile: re-generate

--- a/src/versions/Makefile
+++ b/src/versions/Makefile
@@ -8,7 +8,8 @@ CC	= cc
 CPPFLAGSF=
 CPPFLAGS=
 CFLAGSF	=
-CFLAGS	= -W -Wall -g -O2
+CFLAGS	= -W -Wall -g -O2 -fstack-protector
+LDFLAGS	= -Wl,-z,relro -Wl,-z,now
 EXEEXT	=
 RM	= rm -f
 LN	= ln -f
