src/versions: add sqlite

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,dtc,file,flex,heimdal,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,ncurses,openssl,patch,tcpdump,versions.yml
+targets=bsddialog,byacc,bzip2,dtc,file,flex,heimdal,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,ncurses,openssl,patch,sqlite,tcpdump,versions.yml
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile
@@ -83,6 +83,11 @@ sources=openssl.c
 [patch]
 type=binary
 sources=patch.c
+
+[sqlite]
+type=binary
+cflags=-isystem /usr/include/private/sqlite3
+sources=sqlite.c
 
 [tcpdump]
 type=binary
