src/versions: add zlib

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,byacc,bzip2,dtc,file,flex,heimdal,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,ncurses,openssl,patch,sqlite,tcpdump,versions.yml
+targets=bsddialog,byacc,bzip2,dtc,file,flex,heimdal,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,ncurses,openssl,patch,sqlite,tcpdump,versions.yml,zlib
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile
@@ -93,8 +93,12 @@ sources=sqlite.c
 type=binary
 sources=tcpdump.c
 
+[zlib]
+type=binary
+sources=zlib.c
+
 [versions.yml]
 type=command
-command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./tcpdump) > versions.yml
+command=(./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./tcpdump; ./zlib) > versions.yml
 depends=all
 enabled=0
