--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,9 +1,13 @@
-targets=bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,ncurses,openssl,patch,sqlite,tcpdump,versions.yml,zlib
+targets=awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,less,libarchive,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,ncurses,openssl,patch,sqlite,tcpdump,versions.yml,zlib
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile
 
 #targets
+[awk]
+type=binary
+sources=awk.c
+
 [bc]
 type=binary
 sources=bc.c
@@ -107,6 +111,6 @@ sources=zlib.c
 
 [versions.yml]
 type=command
-command=(./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./less; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./tcpdump; ./zlib) > versions.yml
+command=(./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./less; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./ncurses; ./openssl; ./patch; ./tcpdump; ./zlib) > versions.yml
 depends=all
 enabled=0
